Beat Boy Links Added

--- a/project/_posts/2015-10-14-Beat-Boy.md
+++ b/project/_posts/2015-10-14-Beat-Boy.md
@@ -28,7 +28,7 @@ world!"
 
 I worked on this game as part of the team at <a href="http://www.cocodrilodog.com/" target="_blank">Cocodrilo Dog Games</a>
 for around 4 months, also in the audio engine plugins for Unity that allowed the music synchronization with the gameplay.
-it was published on Steam Greenlight and presented to multiple posible publishers which where interested
+it was published on <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=518744809" target="_blank">Steam Greenlight</a> and presented to multiple posible publishers which where interested
 on it ( psst: including Bandai Namco ;) )
 
 <ul id="toc"></ul>
